// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> closeModal should close the modal when the request was approved 1`] = `
.c1 {
  display: block;
  top: 50%;
  padding: 0;
  margin-top: 0;
  margin-left: 16px;
  margin-right: 16px;
  position: relative;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 9;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  border-radius: 8px;
  height: auto;
  max-height: calc(100vh - 88px * 2);
  overflow: hidden;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c1.fullscreen {
  top: 0;
  margin: 0;
  border-radius: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  height: 100%;
  max-height: initial;
  max-width: initial;
}

.c1.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit {
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit-active {
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2 {
  background-color: rgba(255,255,255,1);
  overflow-y: auto;
  line-height: 1.5;
  padding: 0 16px;
}

.fullscreen .c2 {
  height: 100%;
}

.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  left: 0;
  top: 0;
  background-color: rgba(38,38,38,0.65);
  z-index: 9;
  display: block;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-exit {
  display: block;
  opacity: 1;
}

.c0.open-exit-active {
  display: block;
  opacity: 0;
}

@media screen and (min-width:480px) {
  .c1 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:480px) {
  .c2 {
    padding-left: 0 16px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    padding: 0 24px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    padding: 0 32px;
  }
}

<div>
  <div
    class="container--overlay c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="max-height: 100px;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> closeModal should close the modal when there is no onRequestClose callback 1`] = `
.c1 {
  display: block;
  top: 50%;
  padding: 0;
  margin-top: 0;
  margin-left: 16px;
  margin-right: 16px;
  position: relative;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 9;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  border-radius: 8px;
  height: auto;
  max-height: calc(100vh - 88px * 2);
  overflow: hidden;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c1.fullscreen {
  top: 0;
  margin: 0;
  border-radius: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  height: 100%;
  max-height: initial;
  max-width: initial;
}

.c1.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit {
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit-active {
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2 {
  background-color: rgba(255,255,255,1);
  overflow-y: auto;
  line-height: 1.5;
  padding: 0 16px;
}

.fullscreen .c2 {
  height: 100%;
}

.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  left: 0;
  top: 0;
  background-color: rgba(38,38,38,0.65);
  z-index: 9;
  display: block;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-exit {
  display: block;
  opacity: 1;
}

.c0.open-exit-active {
  display: block;
  opacity: 0;
}

@media screen and (min-width:480px) {
  .c1 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:480px) {
  .c2 {
    padding-left: 0 16px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    padding: 0 24px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    padding: 0 32px;
  }
}

<div>
  <div
    class="container--overlay c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="max-height: 100px;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should not render the modal if it is closed 1`] = `
.c1 {
  display: none;
  top: 50%;
  padding: 0;
  margin-top: 0;
  margin-left: 16px;
  margin-right: 16px;
  position: relative;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 9;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  border-radius: 8px;
  height: auto;
  max-height: calc(100vh - 88px * 2);
  overflow: hidden;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c1.fullscreen {
  top: 0;
  margin: 0;
  border-radius: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  height: 100%;
  max-height: initial;
  max-width: initial;
}

.c1.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit {
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit-active {
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2 {
  background-color: rgba(255,255,255,1);
  overflow-y: auto;
  line-height: 1.5;
  padding: 0 16px;
}

.fullscreen .c2 {
  height: 100%;
}

.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  left: 0;
  top: 0;
  background-color: rgba(38,38,38,0.65);
  z-index: 9;
  display: none;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-exit {
  display: block;
  opacity: 1;
}

.c0.open-exit-active {
  display: block;
  opacity: 0;
}

@media screen and (min-width:480px) {
  .c1 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:480px) {
  .c2 {
    padding-left: 0 16px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    padding: 0 24px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    padding: 0 32px;
  }
}

<div>
  <div
    class="container--overlay c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render fullscreen modal with action bars 1`] = `
.c1 {
  display: block;
  top: 50%;
  padding: 0;
  margin-top: 0;
  margin-left: 16px;
  margin-right: 16px;
  position: relative;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 9;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  border-radius: 8px;
  height: auto;
  max-height: calc(100vh - 88px * 2);
  overflow: hidden;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c1.fullscreen {
  top: 0;
  margin: 0;
  border-radius: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  height: 100%;
  max-height: initial;
  max-width: initial;
}

.c1.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit {
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit-active {
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2 {
  position: relative;
  font-size: 24px;
  line-height: 1.25;
  font-weight: 600;
  text-align: left;
  box-shadow: 0px 26px 18px -23px rgba(0,0,0,0.12);
  padding: 16px;
}

.c3 {
  background-color: rgba(255,255,255,1);
  overflow-y: auto;
  line-height: 1.5;
  padding: 0 16px;
}

.fullscreen .c3 {
  height: 100%;
}

.c4 {
  position: relative;
  overflow: hidden;
  box-shadow: 0px -26px 18px -23px rgba(0,0,0,0.12);
  padding: 16px;
}

.c4 button {
  float: right;
  margin-left: 24px;
}

.c4 button:last-of-type {
  margin-left: 0;
}

.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  left: 0;
  top: 0;
  background-color: rgba(38,38,38,0.65);
  z-index: 9;
  display: block;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-exit {
  display: block;
  opacity: 1;
}

.c0.open-exit-active {
  display: block;
  opacity: 0;
}

@media screen and (min-width:480px) {
  .c1 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:480px) {
  .c2 {
    padding: 16px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    padding: 24px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    padding: 32px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    padding-left: 0 16px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    padding: 0 24px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    padding: 0 32px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    padding: 16px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    padding: 32px;
    padding-top: 24px;
  }
}

<div>
  <div
    class="container--overlay c0"
  >
    <div
      class="fullscreen c1"
    >
      <div
        class="c2"
      >
        <div>
          Action bar controls
        </div>
      </div>
      <div
        class="c3"
      >
        <div>
          Modal contents
        </div>
      </div>
      <div
        class="c4"
      >
        <div>
          Place your controls here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render with actionBar and bottomActionBar 1`] = `
.c1 {
  display: block;
  top: 50%;
  padding: 0;
  margin-top: 0;
  margin-left: 16px;
  margin-right: 16px;
  position: relative;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 9;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  border-radius: 8px;
  height: auto;
  max-height: calc(100vh - 88px * 2);
  overflow: hidden;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c1.fullscreen {
  top: 0;
  margin: 0;
  border-radius: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  height: 100%;
  max-height: initial;
  max-width: initial;
}

.c1.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit {
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit-active {
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2 {
  position: relative;
  font-size: 24px;
  line-height: 1.25;
  font-weight: 600;
  text-align: left;
  box-shadow: 0px 26px 18px -23px rgba(0,0,0,0.12);
  padding: 16px;
}

.c3 {
  background-color: rgba(255,255,255,1);
  overflow-y: auto;
  line-height: 1.5;
  padding: 0 16px;
}

.fullscreen .c3 {
  height: 100%;
}

.c4 {
  position: relative;
  overflow: hidden;
  box-shadow: 0px -26px 18px -23px rgba(0,0,0,0.12);
  padding: 16px;
}

.c4 button {
  float: right;
  margin-left: 24px;
}

.c4 button:last-of-type {
  margin-left: 0;
}

.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  left: 0;
  top: 0;
  background-color: rgba(38,38,38,0.65);
  z-index: 9;
  display: block;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-exit {
  display: block;
  opacity: 1;
}

.c0.open-exit-active {
  display: block;
  opacity: 0;
}

@media screen and (min-width:480px) {
  .c1 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:480px) {
  .c2 {
    padding: 16px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    padding: 24px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    padding: 32px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    padding-left: 0 16px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    padding: 0 24px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    padding: 0 32px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    padding: 16px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c4 {
    padding: 32px;
    padding-top: 24px;
  }
}

<div>
  <div
    class="container--overlay c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div>
          Action bar controls
        </div>
      </div>
      <div
        class="c3"
      >
        <div>
          Modal contents
        </div>
      </div>
      <div
        class="c4"
      >
        <div>
          Place your controls here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render without errors and pass extra props 1`] = `
.c1 {
  display: block;
  top: 50%;
  padding: 0;
  margin-top: 0;
  margin-left: 16px;
  margin-right: 16px;
  position: relative;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 9;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  border-radius: 8px;
  height: auto;
  max-height: calc(100vh - 88px * 2);
  overflow: hidden;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c1.fullscreen {
  top: 0;
  margin: 0;
  border-radius: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  height: 100%;
  max-height: initial;
  max-width: initial;
}

.c1.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit {
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit-active {
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2 {
  background-color: rgba(255,255,255,1);
  overflow-y: auto;
  line-height: 1.5;
  padding: 0 16px;
}

.fullscreen .c2 {
  height: 100%;
}

.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  left: 0;
  top: 0;
  background-color: rgba(38,38,38,0.65);
  z-index: 9;
  display: block;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-exit {
  display: block;
  opacity: 1;
}

.c0.open-exit-active {
  display: block;
  opacity: 0;
}

@media screen and (min-width:480px) {
  .c1 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:480px) {
  .c2 {
    padding-left: 0 16px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    padding: 0 24px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    padding: 0 32px;
  }
}

<div>
  <div
    class="container--overlay c0"
  >
    <div
      class="c1"
      style="width: 210px;"
    >
      <div
        class="c2"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should recalculate shadows and content height on props change 1`] = `
.c1 {
  display: block;
  top: 50%;
  padding: 0;
  margin-top: 0;
  margin-left: 16px;
  margin-right: 16px;
  position: relative;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 9;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  border-radius: 8px;
  height: auto;
  max-height: calc(100vh - 88px * 2);
  overflow: hidden;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c1.fullscreen {
  top: 0;
  margin: 0;
  border-radius: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  height: 100%;
  max-height: initial;
  max-width: initial;
}

.c1.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit {
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit-active {
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2 {
  background-color: rgba(255,255,255,1);
  overflow-y: auto;
  line-height: 1.5;
  padding: 0 16px;
}

.fullscreen .c2 {
  height: 100%;
}

.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  left: 0;
  top: 0;
  background-color: rgba(38,38,38,0.65);
  z-index: 9;
  display: block;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-exit {
  display: block;
  opacity: 1;
}

.c0.open-exit-active {
  display: block;
  opacity: 0;
}

@media screen and (min-width:480px) {
  .c1 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:480px) {
  .c2 {
    padding-left: 0 16px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    padding: 0 24px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    padding: 0 32px;
  }
}

<div>
  <div
    class="container--overlay c0 open-enter open-enter-active"
  >
    <div
      class="c1 open-enter open-enter-active"
    >
      <div
        class="c2"
        style="max-height: 100px;"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should set bottom action bar shadow when the content was scrolled 1`] = `
.c1 {
  display: block;
  top: 50%;
  padding: 0;
  margin-top: 0;
  margin-left: 16px;
  margin-right: 16px;
  position: relative;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 9;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  border-radius: 8px;
  height: auto;
  max-height: calc(100vh - 88px * 2);
  overflow: hidden;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c1.fullscreen {
  top: 0;
  margin: 0;
  border-radius: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  height: 100%;
  max-height: initial;
  max-width: initial;
}

.c1.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit {
  display: block;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c1.open-exit-active {
  display: block;
  opacity: 0;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c2 {
  background-color: rgba(255,255,255,1);
  overflow-y: auto;
  line-height: 1.5;
  padding: 0 16px;
}

.fullscreen .c2 {
  height: 100%;
}

.c3 {
  position: relative;
  overflow: hidden;
  box-shadow: 0px -26px 18px -23px rgba(0,0,0,0.12);
  padding: 16px;
}

.c3 button {
  float: right;
  margin-left: 24px;
}

.c3 button:last-of-type {
  margin-left: 0;
}

.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  left: 0;
  top: 0;
  background-color: rgba(38,38,38,0.65);
  z-index: 9;
  display: block;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-exit {
  display: block;
  opacity: 1;
}

.c0.open-exit-active {
  display: block;
  opacity: 0;
}

@media screen and (min-width:480px) {
  .c1 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    max-width: 520px;
  }
}

@media screen and (min-width:480px) {
  .c2 {
    padding-left: 0 16px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    padding: 0 24px;
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    padding: 0 32px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    padding: 16px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    padding: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    padding: 32px;
    padding-top: 24px;
  }
}

<div>
  <div
    class="container--overlay c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="max-height: 100px;"
      >
        <div
          data-testid="content"
        >
          Modal contents
        </div>
      </div>
      <div
        class="c3"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
